Fix positioning and alignment of article type labels - #94

--- a/src/App.css
+++ b/src/App.css
@@ -132,14 +132,10 @@ textarea {
 	font-family: "Roboto", "Helvetica", "Arial", sans-serif;
 	font-size: .75rem;
 	display: inline-block;
-	border-radius: 3px;
-	margin-bottom: 5px;
-	margin-top: 5px;
-	margin-right: 5px;
+	margin-right: 8px;
 	vertical-align: top;
 	line-height: 1.5em;
 	opacity: 0.4;
-	padding: 1px 4px;
 }
 
 .ArticleBadgeWithCount .Count {
@@ -152,10 +148,6 @@ textarea {
 	margin: 0 0 0 5px;
 	border: 1px solid #BBB;
 	vertical-align: 1.75px;
-}
-
-.ArticleBadgeWithCount.ArticleType {
-	margin-top: 2px;
 }
 
 .ArticleCommentaryBadge {
